# MycetomaAi

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  EnterpriseBlock.md  README.md  datacleanup.md  docker-compose.yml  kaggle.json  polish.md  pretrain_data_pipeline.py  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/api/: main.py
backend/tests/: test_api.py  test_inference.py  test_model.py
config/: api.yaml  model.yaml  training.yaml
configs/: default.yaml
docs/: DATASETS.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExplanationPanel.tsx  HeatmapViewer.tsx  ImageUpload.tsx  ResultsPanel.tsx
frontend/services/: api.ts
notebooks/: colab_training_setup.ipynb  mycetoma_training.ipynb  xai_exploration.ipynb
outputs/: logs.csv  metrics.json
outputs/predictions/: sample_0_info.txt  sample_1_info.txt  sample_2_info.txt
results/: validation_results.json
scripts/: ablation.py  create_kaggle_dataset.py  create_sample_data.py  evaluate.py  generate_outputs.py  prepare_openfungi.py  train.py  train_simclr.py  validate_pipeline.py
src/data/: dataset.py  stain_normalization.py  transforms.py
src/evaluation/: metrics.py  xai.py
src/models/: __init__.py  backbone.py  baselines.py  few_shot.py  graph_morphology.py  loss.py  model.py  multi_task_head.py  refinement.py  segmentation_head.py  simclr.py  ssl_encoder.py
src/training/: losses.py  ssl_pretrainer.py  trainer.py
tests/: test_overfit.py  test_trainer_smoke.py
(+16 files in other folders)
